// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. general tests: data attributes - {"backgroundColor":"rebeccapurple","margin":2} 1`] = `
.css-12gg9yz,
[data-css-12gg9yz] {
  background-color: rebeccapurple;
  margin: 2px;
}

<div
  data-css-12gg9yz=""
/>
`;

exports[`2. general tests: media queries - {"fontSize":24,"margin":12,"@media (max-width: 641px)":{"fontSize":20,"margin":10}} 1`] = `
.css-1kjhlaz,
[data-css-1kjhlaz] {
  font-size: 24px;
  margin: 12px;
}

@media (max-width: 641px) {
  .css-1kjhlaz,
  [data-css-1kjhlaz] {
    font-size: 20px;
    margin: 10px;
  }
}

<div
  data-css-1kjhlaz=""
/>
`;

exports[`3. general tests: pseudo elements - {"& button":{"color":"green"}} 1`] = `
.css-1stncom button,
[data-css-1stncom] button {
  color: green;
}

<div
  data-css-1stncom=""
/>
`;

exports[`4. general tests: pseudo states - {":hover":{"backgroundColor":"blue"}} 1`] = `
.css-11zq2gh:hover,
[data-css-11zq2gh]:hover {
  background-color: blue;
}

<div
  data-css-11zq2gh=""
/>
`;

exports[`doesn't mess up stuff that does't have styles 1`] = `<div />`;

exports[`enzyme.mount 1`] = `
.css-1otybxc,
[data-css-1otybxc] {
  padding: 4em;
  background: papayawhip;
}

.css-1tnuino,
[data-css-1tnuino] {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<Wrapper>
  <section
    className="css-1otybxc"
  >
    <Title>
      <h1
        className="css-1tnuino"
      >
        Hello World, this is my first glamor styled component!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`enzyme.render 1`] = `
.css-1otybxc,
[data-css-1otybxc] {
  padding: 4em;
  background: papayawhip;
}

.css-1tnuino,
[data-css-1tnuino] {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<section
  class="css-1otybxc"
>
  <h1
    class="css-1tnuino"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`enzyme.shallow 1`] = `
.css-1otybxc,
[data-css-1otybxc] {
  padding: 4em;
  background: papayawhip;
}

<section
  className="css-1otybxc"
>
  <Title>
    Hello World, this is my first glamor styled component!
  </Title>
</section>
`;

exports[`react-test-renderer 1`] = `
.css-1otybxc,
[data-css-1otybxc] {
  padding: 4em;
  background: papayawhip;
}

.css-1tnuino,
[data-css-1tnuino] {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<section
  className="css-1otybxc"
>
  <h1
    className="css-1tnuino"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`works when the root element does not have styles 1`] = `
.css-1otybxc,
[data-css-1otybxc] {
  padding: 4em;
  background: papayawhip;
}

<div>
  <section
    className="css-1otybxc"
  />
</div>
`;
